hphp/hack/test/typecheck/abstract_typeconsts/implement_interface_abstract2.php
<?hh

interface I {
  <<__Enforceable>>
  abstract const type T as arraykey;
}
abstract class A {
  abstract const type T as arraykey = string;
}

abstract class C extends A implements I {
  public function f(): this::T {
    return 3 as this::T;
  }
}
